fixed spacing

--- a/wildpidiea/styles/style.css
+++ b/wildpidiea/styles/style.css
@@ -119,7 +119,7 @@ h3{
 p{
     color: var(--paragraph-color-on-white);
     font-size: 19px ;
-    line-height: 25px;
+    line-height: 35px;
     margin-left: 60px;
     margin-right: 60px;
     text-align: center;
@@ -136,7 +136,7 @@ ul{
 #pic-collage{
     max-height: 300px;
     margin-top: 50px;
-    margin-bottom: 80px;
+    margin-bottom: 140px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
     background-color: white;
@@ -228,7 +228,10 @@ footer a:hover{
 }
 #games-msg{
     margin-bottom: 50px;
-}  
+} 
+#title2{
+    margin-top: 30px;
+} 
 #games-pic-collage{
     
     display: grid;
